--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -49,10 +49,14 @@ Data Crow 3.6 [Release on xx/10/2009] [testing: high] [target: production]
   server, search mode and region.
 - File Importer now remembers the selected "directory usage". 
 - Quick View: filename is now a clickable link.
+- Demo Data is now loaded right after the data layer has been initialized instead of 
+  during the database creation process.
 
 [Fixed]
 - "Pick a Date": larger set of years to make the navigation easier + a fix for the up and 
   down error of the year (both went back in time). 
+- Xml Export: Dates are now always exported like so: yyyy-MM-dd. This prevents problems
+  when importing dates into other systems.
    
 
 -----------------------------------------------------------------------------------------
