--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -55,9 +55,9 @@ Data Crow 3.6 [Release on xx/10/2009] [testing: high] [target: production]
 [Fixed]
 - "Pick a Date": larger set of years to make the navigation easier + a fix for the up and 
   down error of the year (both went back in time). 
-- Xml Export: Dates are now always exported like so: yyyy-MM-dd. This prevents problems
+- XML Export: Dates are now always exported like so: yyyy-MM-dd. This prevents problems
   when importing dates into other systems.
-   
+
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.5.1 [Release on 26/09/2009] [testing: high] [target: production]
