--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -47,6 +47,10 @@ Data Crow 3.6 [Release on xx/10/2009] [testing: high] [target: production]
     convenient way to locate an individual file that has been moved. The functionality
     uses the drive manager functionality and offers to match on filename, filename +
     file size or on file size + hash. 
+- Each property can now have alternative values. This is convenient in case you want to make
+  sure that properties retrieved by online services are mapped to your own properties. 
+  The alternative values have to be entered separated by ';' characters. The input needs to
+  start and end with a ';' character.
 
 [Changed]
 - Added additional font rendering options (Settings > Settings > Font).
@@ -68,6 +72,13 @@ Data Crow 3.6 [Release on xx/10/2009] [testing: high] [target: production]
   The ASINs have been migrated to the new external references field.
 - Disc ID fields have been removed from the audio CD and music album modules. The Disc IDs
   have been transferred to the new external references field. 
+- Updated several of the icons for the property modules.
+- The individual 'maintain' view popup menu options have been put in a separate 'maintain' 
+  menu.
+- The property modules 'edition type' and 'binding' for books are no longer contained in the
+  modules folder. They are created within the system instead (same as all other system 
+  property modules). The editiontype.jar and binding.jar files are removed on startup.
+- The movie module has obtained addition fields; color and aspect ratio.
 
 [Fixed]
 - "Pick a Date": larger set of years to make the navigation easier + a fix for the up and 
