--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -79,7 +79,7 @@ Data Crow 3.6 [Release on xx/10/2009] [testing: high] [target: production]
   modules folder. They are created within the system instead (same as all other system 
   property modules). The editiontype.jar and binding.jar files are removed on startup.
 - The movie module has obtained addition fields; color and aspect ratio.
-- IMDB online search now retrieves the color, aspect ratio and the language.
+- IMDB online search now retrieves the color, aspect ratio and language.
 
 [Fixed]
 - "Pick a Date": larger set of years to make the navigation easier + a fix for the up and 
