--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -51,6 +51,8 @@ Data Crow 3.6 [Release on xx/10/2009] [testing: high] [target: production]
   sure that properties retrieved by online services are mapped to your own properties. 
   The alternative values have to be entered separated by ';' characters. The input needs to
   start and end with a ';' character.
+- A new book online search: ISBNdb.com. This online service retrieves the book information
+  from ISBNdb.com and the front cover from Amazon.com.
 
 [Changed]
 - Added additional font rendering options (Settings > Settings > Font).
@@ -80,12 +82,17 @@ Data Crow 3.6 [Release on xx/10/2009] [testing: high] [target: production]
   property modules). The editiontype.jar and binding.jar files are removed on startup.
 - The movie module has obtained addition fields; color and aspect ratio.
 - IMDB online search now retrieves the color, aspect ratio and language.
+- Amazon service now retrieves the color (if available) and the aspect ratio.
+- Ofdb.de now adds an external reference to the item on the IMDB.com page.
 
 [Fixed]
 - "Pick a Date": larger set of years to make the navigation easier + a fix for the up and 
   down error of the year (both went back in time). 
 - XML Export: Dates are now always exported like so: yyyy-MM-dd. This prevents problems
   when importing dates into other systems.
+- IMDB online service: when a movie has several countries it is imported as a single
+  country (item "USA, The Netherlands" instead of two separate items).
+- Several encoding issues for the online services.
 
 
 -----------------------------------------------------------------------------------------
