*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,12 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.7 beta [Release on xx/10/2009] [testing: medium] [target: beta]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.6 [Release on 18/10/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 ! Note: The minimum Java version is now Java 6 (also known as Java 1.6).
