*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -9,7 +9,9 @@ Data Crow 3.7  [Release on xx/11/2009] [testing: medium] [target: BETA]
 - Templates could not be saved.
 - Templates are not correctly displayed in the view.
 - Template form does not show tabs as defined for the item itself.
-
+- Images not displayed in the web application if the images/modules folder does 
+  not exist.
+  
 
 -----------------------------------------------------------------------------------------
 Data Crow BETA 3.7  [Release on 30/10/2009] [testing: medium] [target: BETA]
