*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.7  [Release on xx/11/2009] [testing: medium] [target: BETA]
+Data Crow 3.7  [Release on xx/11/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [Changed]
