--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -3,7 +3,9 @@ Data Crow 3.8  [Release on xx/11/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [New]
-- Metacritic game and movie online search.
+- Metacritic game and movie online service. An excellent resource for game and movie
+  reviews.
+- FreeBookSpot online service. A site from which e-books can be downloaded.
 
 [Changed]
 - Invalid auto numberers are now automatically removed on startup. They can become 
@@ -11,7 +13,7 @@ Data Crow 3.8  [Release on xx/11/2009] [testing: high] [target: production]
 - Added additional checks to see if an item was destroyed. Picture objects are now 
   also internally recycled.
 - The drive scanner and drive poller (part of the Drive Manager) can now be configured
-  (from within the Drive Manager dialog) to run on each startup. 
+  (from within the Drive Manager dialog) to run on startup. 
 
 [Fixed]
 - Reserved keywords could be used as module and field names causing all kinds of startup
