--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,12 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.8.1  [Release on xx/11/2009] [testing: moderate] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Categories and such could still be deleted even when used by other items.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.8  [Release on 10/11/2009] [testing: moderate] [target: production]
 -----------------------------------------------------------------------------------------
 The 3.7 version contained errors which were not noticed while the 3.7 was in its
