--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -4,7 +4,7 @@ Data Crow 3.8.1  [Release on xx/11/2009] [testing: high] [target: production]
 
 [Fixed]
 - Categories and such could still be deleted even when used by other items.
-- French translation was corrupted (sorry Skorpionnan)!
+- French translation was added incorrectly to the installer package (sorry Skorpionnan)!
 - Errors when trying to delete an item (Date cannot be cast to collection of DcObject). 
 
 [Changed]
