--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -6,6 +6,7 @@ Data Crow 3.8.1  [Release on xx/11/2009] [testing: high] [target: production]
 - Categories and such could still be deleted even when used by other items.
 - French translation was added incorrectly to the installer package (sorry Skorpionnan)!
 - Errors when trying to delete an item (Date cannot be cast to collection of DcObject). 
+- Quick View does not display the item when the contact person module has been disabled.
 
 [Changed]
 - Added the file backed and the container managed properties to the module wizard.
