--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -7,6 +7,9 @@ Data Crow 3.8.1  [Release on xx/11/2009] [testing: high] [target: production]
 - French translation was added incorrectly to the installer package (sorry Skorpionnan)!
 - Errors when trying to delete an item (Date cannot be cast to collection of DcObject). 
 - Quick View does not display the item when the contact person module has been disabled.
+- Error in queries when only references have been changed for an item.
+- Only 10 custom property modules could be created. In the new setup you can have an 
+  unlimited amount of custom property modules. 
 
 [Changed]
 - Added the file backed and the container managed properties to the module wizard.
