--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -10,6 +10,7 @@ Data Crow 3.8.1  [Release on xx/11/2009] [testing: high] [target: production]
 - Error in queries when only references have been changed for an item.
 - Only 10 custom property modules could be created. In the new setup you can have an 
   unlimited amount of custom property modules. 
+- Cache is now always cleared when upgrading from an older version.
 
 [Changed]
 - Added the file backed and the container managed properties to the module wizard.
