--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,16 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.8.2  [Release on xx/11/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- 
+
+[Changed]
+- Updated Italian translated thanks to Marco Artioli. 
+- Added a new reference to the software module: License.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.8.1  [Release on 15/11/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
